# NeuralBandit

./: .gitignore  .travis.yml  README.md  pyproject.toml
game/: __init__.py  data.py
neuralbandit/: __init__.py  algorithm.py  data.py  game.py  sota.py
tests/: test_neuralbandit.py
